Added Textbox PlugIn

--- a/src/index.html
+++ b/src/index.html
@@ -9,10 +9,13 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
     <link href="https://cdn.jsdelivr.net/npm/flowbite@3.1.2/dist/flowbite.min.css" rel="stylesheet" />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
+<script src="https://cdn.tiny.cloud/1/r39o5vohooh2cz77kbmlo094hehz7j1aybysxwn15n0y010k/tinymce/6/tinymce.min.js" referrerpolicy="origin"></script>
 </head>
 <body>
   <app-root></app-root>
    <script src="https://cdn.jsdelivr.net/npm/@tailwindcss/browser@4"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/flowbite/1.8.1/flowbite.min.js"></script>
+
+
 </body>
 </html>
